various changes
- *add java-util-kt*
- remove some deprecated classes/methods
- remove @Async
- add Magic#getJavaVersion
- add Promise#create to avoid overload conflicts
- mark rest.RESTAPI as non-experimental
- mark Rethrow because i don't know why such this thing exists
- removed Thrower$ThrowableConsumer
- deprecate ThrowableActionableResult#failure and added #error instead
- some changes in reflect classes